--- a/DSPro/MDK-ARM/DSPro/DSPro.build_log.htm
+++ b/DSPro/MDK-ARM/DSPro/DSPro.build_log.htm
@@ -27,11 +27,57 @@ Project File Date:  07/27/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'd:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'DSPro'
+compiling dma.c...
+compiling gpio.c...
+compiling adc.c...
 compiling main.c...
+compiling tim.c...
+compiling stm32f1xx_it.c...
+../Core/Src/stm32f1xx_it.c(39): warning:  #1295-D: Deprecated declaration DS_CoreBoardUsartReceive_IDLE - give arg types
+  extern void DS_CoreBoardUsartReceive_IDLE();
+../Core/Src/stm32f1xx_it.c: 1 warning, 0 errors
+compiling spi.c...
+compiling usart.c...
+../Core/Src/usart.c(452): warning:  #940-D: missing return statement at end of non-void function "DS_HandlingUartsData" 
+  }
+../Core/Src/usart.c(448): warning:  #177-D: variable "state"  was declared but never referenced
+    DS_StatusTypeDef state = DS_OK;
+../Core/Src/usart.c(449): warning:  #177-D: variable "xorTemp"  was declared but never referenced
+    uint8_t xorTemp;
+../Core/Src/usart.c(450): warning:  #177-D: variable "i"  was declared but never referenced
+    uint16_t i;
+../Core/Src/usart.c(458): warning:  #940-D: missing return statement at end of non-void function "DS_SendDataToSendingTable" 
+  }
+../Core/Src/usart.c(456): warning:  #177-D: variable "state"  was declared but never referenced
+    DS_StatusTypeDef state = DS_OK;
+../Core/Src/usart.c(434): warning:  #177-D: function "getXORCode"  was declared but never referenced
+  static uint8_t getXORCode(uint8_t* pData,uint16_t len)
+../Core/Src/usart.c(446): warning:  #177-D: function "DS_HandlingUartsData"  was declared but never referenced
+  static DS_StatusTypeDef DS_HandlingUartsData(uint8_t* pDataBuff, uint16_t dataLength)
+../Core/Src/usart.c: 8 warnings, 0 errors
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_adc.c...
+compiling stm32f1xx_hal_adc_ex.c...
+compiling stm32f1xx_hal_spi_ex.c...
+compiling stm32f1xx_hal_spi.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=15968 RO-data=360 RW-data=60 ZI-data=3348  
+Program Size: Code=15972 RO-data=360 RW-data=60 ZI-data=3348  
 FromELF: creating hex file...
-"DSPro\DSPro.axf" - 0 Error(s), 0 Warning(s).
+"DSPro\DSPro.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +100,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:15
 </pre>
 </body>
 </html>
